accelerated-domains: add dianshu119.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25283,6 +25283,7 @@ server=/dianshi.com/114.114.114.114
 server=/dianshige.com/114.114.114.114
 server=/dianshihome.com/114.114.114.114
 server=/dianshijia.com/114.114.114.114
+server=/dianshu119.com/114.114.114.114
 server=/diansu-cdn.net/114.114.114.114
 server=/diantads.com/114.114.114.114
 server=/diantonghudong.com/114.114.114.114
