--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25398,6 +25398,7 @@ server=/didiqiche.com/114.114.114.114
 server=/didishijie.com/114.114.114.114
 server=/didispace.com/114.114.114.114
 server=/didistatic.com/114.114.114.114
+server=/diditaxi.com/114.114.114.114
 server=/didiwuxian.com/114.114.114.114
 server=/didixk.com/114.114.114.114
 server=/didiyun.com/114.114.114.114
