accelerated-domains: add dimfarlow.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25473,6 +25473,7 @@ server=/dimeng.net/114.114.114.114
 server=/dimensi-9.com/114.114.114.114
 server=/dimensionalzone.com/114.114.114.114
 server=/dimenspace.com/114.114.114.114
+server=/dimfarlow.com/114.114.114.114
 server=/dimianyinghua.com/114.114.114.114
 server=/dimocap.com/114.114.114.114
 server=/dimolabel.com/114.114.114.114
