--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25517,6 +25517,7 @@ server=/dingdx.com/114.114.114.114
 server=/dingefactory.com/114.114.114.114
 server=/dingfengtianxia.com/114.114.114.114
 server=/dingfubang.com/114.114.114.114
+server=/dingge.cc/114.114.114.114
 server=/dinggou.org/114.114.114.114
 server=/dinghaiec.com/114.114.114.114
 server=/dinghegc.com/114.114.114.114
