--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25549,6 +25549,7 @@ server=/dingsheng.com/114.114.114.114
 server=/dingso.com/114.114.114.114
 server=/dingtalent.com/114.114.114.114
 server=/dingtalk.com/114.114.114.114
+server=/dingtalk.net/114.114.114.114
 server=/dingtalkapps.com/114.114.114.114
 server=/dingtalkcloud.com/114.114.114.114
 server=/dingtangzqx.com/114.114.114.114
