--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25554,6 +25554,7 @@ server=/dingtalkapps.com/114.114.114.114
 server=/dingtalkcloud.com/114.114.114.114
 server=/dingtangzqx.com/114.114.114.114
 server=/dingteam.com/114.114.114.114
+server=/dingtoo.com/114.114.114.114
 server=/dingweilishi.com/114.114.114.114
 server=/dingxiang-inc.com/114.114.114.114
 server=/dingxikeji.com/114.114.114.114
