accelerated-domains: add dircash-promost.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25589,6 +25589,7 @@ server=/diqizu.xyz/114.114.114.114
 server=/diqua.com/114.114.114.114
 server=/dir001.com/114.114.114.114
 server=/dir28.com/114.114.114.114
+server=/dircash-promost.com/114.114.114.114
 server=/directui.com/114.114.114.114
 server=/dis9.net/114.114.114.114
 server=/discountedkwatch.com/114.114.114.114
