accelerated-domains: add dkdlsj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25751,6 +25751,7 @@ server=/dk8s.com/114.114.114.114
 server=/dkasdeerw.xyz/114.114.114.114
 server=/dkasffredf.xyz/114.114.114.114
 server=/dkdangle.com/114.114.114.114
+server=/dkdlsj.com/114.114.114.114
 server=/dkewl.com/114.114.114.114
 server=/dkgyw.com/114.114.114.114
 server=/dkhs.com/114.114.114.114
