--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25771,6 +25771,7 @@ server=/dkstrtss.xyz/114.114.114.114
 server=/dktad.com/114.114.114.114
 server=/dktzjt.com/114.114.114.114
 server=/dku51.com/114.114.114.114
+server=/dkweuy.com/114.114.114.114
 server=/dkxls.com/114.114.114.114
 server=/dky.cc/114.114.114.114
 server=/dkybpc.com/114.114.114.114
