--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25838,6 +25838,7 @@ server=/dlnel.com/114.114.114.114
 server=/dlnel.org/114.114.114.114
 server=/dlonng.com/114.114.114.114
 server=/dlosri.com/114.114.114.114
+server=/dlouf.com/114.114.114.114
 server=/dlphoschem.com/114.114.114.114
 server=/dlpifu.com/114.114.114.114
 server=/dlpuwan.com/114.114.114.114
