--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25920,6 +25920,7 @@ server=/dmpans.com/114.114.114.114
 server=/dmpdmp.com/114.114.114.114
 server=/dmpdsp.com/114.114.114.114
 server=/dmplugin.net/114.114.114.114
+server=/dmqapp.com/114.114.114.114
 server=/dmqhyadmin.com/114.114.114.114
 server=/dmqst.com/114.114.114.114
 server=/dmqwl.com/114.114.114.114
