--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25940,6 +25940,7 @@ server=/dmzx.com/114.114.114.114
 server=/dmzzbjb.net/114.114.114.114
 server=/dn.com/114.114.114.114
 server=/dn23.com/114.114.114.114
+server=/dn4qoz.com/114.114.114.114
 server=/dn580.com/114.114.114.114
 server=/dn8188.com/114.114.114.114
 server=/dna0772.com/114.114.114.114
