accelerated-domains: add dollsdeclare.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26192,6 +26192,7 @@ server=/dolike.com/114.114.114.114
 server=/doll-leaves.com/114.114.114.114
 server=/doll-zone.com/114.114.114.114
 server=/dollphoin.site/114.114.114.114
+server=/dollsdeclare.com/114.114.114.114
 server=/dollun.com/114.114.114.114
 server=/dolphin-browser.com/114.114.114.114
 server=/dolphin.com/114.114.114.114
