--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26398,6 +26398,7 @@ server=/doteck.com/114.114.114.114
 server=/dotgate.com/114.114.114.114
 server=/doticloud.com/114.114.114.114
 server=/dotsage.com/114.114.114.114
+server=/dottexpress.com/114.114.114.114
 server=/dotty-china.com/114.114.114.114
 server=/dou.bz/114.114.114.114
 server=/dou.li/114.114.114.114
