accelerated-domains: add dotwe.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26400,6 +26400,7 @@ server=/doticloud.com/114.114.114.114
 server=/dotsage.com/114.114.114.114
 server=/dottexpress.com/114.114.114.114
 server=/dotty-china.com/114.114.114.114
+server=/dotwe.org/114.114.114.114
 server=/dou.bz/114.114.114.114
 server=/dou.li/114.114.114.114
 server=/douba1688.com/114.114.114.114
