--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26679,6 +26679,7 @@ server=/drcg8.com/114.114.114.114
 server=/drclvs.com/114.114.114.114
 server=/drcnetdns.com/114.114.114.114
 server=/drcuiyutao.com/114.114.114.114
+server=/drdwy.com/114.114.114.114
 server=/dream-loft.com/114.114.114.114
 server=/dream-marathon.com/114.114.114.114
 server=/dream.ren/114.114.114.114
