--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26680,6 +26680,7 @@ server=/drclvs.com/114.114.114.114
 server=/drcnetdns.com/114.114.114.114
 server=/drcuiyutao.com/114.114.114.114
 server=/drdwy.com/114.114.114.114
+server=/dre8.com/114.114.114.114
 server=/dream-loft.com/114.114.114.114
 server=/dream-marathon.com/114.114.114.114
 server=/dream.ren/114.114.114.114
