accelerated-domains: add drtrs55.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26743,6 +26743,7 @@ server=/drscrm.com/114.114.114.114
 server=/drsrp.com/114.114.114.114
 server=/drstour.com/114.114.114.114
 server=/drsxy.com/114.114.114.114
+server=/drtrs55.fun/114.114.114.114
 server=/drtyf.com/114.114.114.114
 server=/drugfuture.com/114.114.114.114
 server=/druggcp.net/114.114.114.114
