--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26761,6 +26761,7 @@ server=/ds123456.com/114.114.114.114
 server=/ds5f.com/114.114.114.114
 server=/dsad234.fun/114.114.114.114
 server=/dsads55.fun/114.114.114.114
+server=/dsaewew21.fun/114.114.114.114
 server=/dsary.com/114.114.114.114
 server=/dsb.ink/114.114.114.114
 server=/dsblog.net/114.114.114.114
