accelerated-domains: add dscds111.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26766,6 +26766,7 @@ server=/dsary.com/114.114.114.114
 server=/dsb.ink/114.114.114.114
 server=/dsblog.net/114.114.114.114
 server=/dscbs.com/114.114.114.114
+server=/dscds111.fun/114.114.114.114
 server=/dscq.com/114.114.114.114
 server=/dsdbxg.com/114.114.114.114
 server=/dsdod.com/114.114.114.114
