accelerated-domains: add dsda21.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26768,6 +26768,7 @@ server=/dsblog.net/114.114.114.114
 server=/dscbs.com/114.114.114.114
 server=/dscds111.fun/114.114.114.114
 server=/dscq.com/114.114.114.114
+server=/dsda21.fun/114.114.114.114
 server=/dsdbxg.com/114.114.114.114
 server=/dsdod.com/114.114.114.114
 server=/dseman.com/114.114.114.114
