--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26772,6 +26772,7 @@ server=/dsda21.fun/114.114.114.114
 server=/dsdbxg.com/114.114.114.114
 server=/dsdod.com/114.114.114.114
 server=/dsdsa33.fun/114.114.114.114
+server=/dsdsg44.fun/114.114.114.114
 server=/dseman.com/114.114.114.114
 server=/dser.com/114.114.114.114
 server=/dsfdc.com/114.114.114.114
