--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26779,6 +26779,7 @@ server=/dsfdc.com/114.114.114.114
 server=/dsfdy.com/114.114.114.114
 server=/dsfh2.icu/114.114.114.114
 server=/dsfjh.vip/114.114.114.114
+server=/dsfsdft4324.xyz/114.114.114.114
 server=/dsfzcz.com/114.114.114.114
 server=/dsgaokao.com/114.114.114.114
 server=/dshigao.com/114.114.114.114
