--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26808,6 +26808,7 @@ server=/dspczg.pw/114.114.114.114
 server=/dspga.com/114.114.114.114
 server=/dspwhy.com/114.114.114.114
 server=/dsq.com/114.114.114.114
+server=/dssddf33.fun/114.114.114.114
 server=/dsspinfo.com/114.114.114.114
 server=/dsstudio.tech/114.114.114.114
 server=/dssz.com/114.114.114.114
