--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26946,6 +26946,7 @@ server=/duiai.com/114.114.114.114
 server=/duibiao.com/114.114.114.114
 server=/duibimao.com/114.114.114.114
 server=/duiduipengds.com/114.114.114.114
+server=/duihuashijie.com/114.114.114.114
 server=/duijie666.com/114.114.114.114
 server=/duikuang.com/114.114.114.114
 server=/duimg.com/114.114.114.114
