--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27093,6 +27093,7 @@ server=/duosai.com/114.114.114.114
 server=/duose.com/114.114.114.114
 server=/duosenfashion.com/114.114.114.114
 server=/duoshan.com/114.114.114.114
+server=/duoshitong.com/114.114.114.114
 server=/duoshoubang.com/114.114.114.114
 server=/duoshuo.com/114.114.114.114
 server=/duososo.com/114.114.114.114
