accelerated-domains: add duusuu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27154,6 +27154,7 @@ server=/dutype.com/114.114.114.114
 server=/duu5.com/114.114.114.114
 server=/duuchin.com/114.114.114.114
 server=/duunion.com/114.114.114.114
+server=/duusuu.com/114.114.114.114
 server=/duwenxue.com/114.114.114.114
 server=/duwenz.com/114.114.114.114
 server=/duwenzhang.com/114.114.114.114
