--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27219,6 +27219,7 @@ server=/dwtedx.com/114.114.114.114
 server=/dww11.com/114.114.114.114
 server=/dwxw.net/114.114.114.114
 server=/dwxyamaha.com/114.114.114.114
+server=/dwyeuy.com/114.114.114.114
 server=/dwz.date/114.114.114.114
 server=/dwz.lc/114.114.114.114
 server=/dwzjd.com/114.114.114.114
