--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27449,6 +27449,7 @@ server=/dzkbw.com/114.114.114.114
 server=/dzlaa.com/114.114.114.114
 server=/dzljy.com/114.114.114.114
 server=/dzllzg.com/114.114.114.114
+server=/dzlndygh.com/114.114.114.114
 server=/dzmachines.com/114.114.114.114
 server=/dzmhospital.com/114.114.114.114
 server=/dzng.com/114.114.114.114
