--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27815,6 +27815,7 @@ server=/ebscn.com/114.114.114.114
 server=/ebseek.com/114.114.114.114
 server=/ebsfw.com/114.114.114.114
 server=/ebtang.com/114.114.114.114
+server=/ebtcbank.com/114.114.114.114
 server=/ebtrust.com/114.114.114.114
 server=/ebuckler.com/114.114.114.114
 server=/ebuy16.com/114.114.114.114
