accelerated-domains: add edcdfg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27984,6 +27984,7 @@ server=/edazhang.com/114.114.114.114
 server=/edb-tech.com/114.114.114.114
 server=/edb29.com/114.114.114.114
 server=/edcba.com/114.114.114.114
+server=/edcdfg.com/114.114.114.114
 server=/edcfda.com/114.114.114.114
 server=/eddcc.icu/114.114.114.114
 server=/eddic.net/114.114.114.114
