--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27988,6 +27988,7 @@ server=/edcdfg.com/114.114.114.114
 server=/edcfda.com/114.114.114.114
 server=/eddcc.icu/114.114.114.114
 server=/eddic.net/114.114.114.114
+server=/eddong.com/114.114.114.114
 server=/eddycjy.com/114.114.114.114
 server=/ede35.com/114.114.114.114
 server=/edefang.net/114.114.114.114
