accelerated-domains: add edmontonservice.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28024,6 +28024,7 @@ server=/ediuschina.com/114.114.114.114
 server=/edk24.com/114.114.114.114
 server=/edlcaster.com/114.114.114.114
 server=/edmcn.net/114.114.114.114
+server=/edmontonservice.com/114.114.114.114
 server=/edmseller.com/114.114.114.114
 server=/edns.com/114.114.114.114
 server=/edo-bijiben.com/114.114.114.114
