--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28062,6 +28062,7 @@ server=/edu84.net/114.114.114.114
 server=/edu88.com/114.114.114.114
 server=/eduaiplat.com/114.114.114.114
 server=/eduancm.com/114.114.114.114
+server=/eduapaashwc.com/114.114.114.114
 server=/eduardoam.com/114.114.114.114
 server=/eduartisan.com/114.114.114.114
 server=/educg.net/114.114.114.114
