--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28115,6 +28115,7 @@ server=/eduzs.net/114.114.114.114
 server=/edwiv.com/114.114.114.114
 server=/edxmy.cc/114.114.114.114
 server=/ee-nav.com/114.114.114.114
+server=/ee-skin.com/114.114.114.114
 server=/ee123.net/114.114.114.114
 server=/ee1234.com/114.114.114.114
 server=/ee68.com/114.114.114.114
