--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28163,6 +28163,7 @@ server=/eeparking.com/114.114.114.114
 server=/eepw.com/114.114.114.114
 server=/eeqiu.com/114.114.114.114
 server=/eeqweqw.fun/114.114.114.114
+server=/eeryt111.fun/114.114.114.114
 server=/eeskill.com/114.114.114.114
 server=/eeso.net/114.114.114.114
 server=/eestar.com/114.114.114.114
