accelerated-domains: add egesdashb8.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28228,6 +28228,7 @@ server=/egainnews.com/114.114.114.114
 server=/egbt.net/114.114.114.114
 server=/egcmedia.com/114.114.114.114
 server=/egeel.com/114.114.114.114
+server=/egesdashb8.fun/114.114.114.114
 server=/egfb2221.com/114.114.114.114
 server=/egg.htcsense.com/114.114.114.114
 server=/egg0.icu/114.114.114.114
