accelerated-domains: add eghnmj.xyz

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28235,6 +28235,7 @@ server=/egg0.icu/114.114.114.114
 server=/eggbnk.com/114.114.114.114
 server=/eggrj.com/114.114.114.114
 server=/eghimalayanak.com/114.114.114.114
+server=/eghnmj.xyz/114.114.114.114
 server=/egjqgs.com/114.114.114.114
 server=/egoint.com/114.114.114.114
 server=/egongzheng.com/114.114.114.114
