--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28358,6 +28358,7 @@ server=/ejie.me/114.114.114.114
 server=/ejiecheng.com/114.114.114.114
 server=/ejinshan.net/114.114.114.114
 server=/ejion.net/114.114.114.114
+server=/ejiur.com/114.114.114.114
 server=/ejktj.com/114.114.114.114
 server=/ejmrh.com/114.114.114.114
 server=/ejomoo.com/114.114.114.114
