--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28687,6 +28687,7 @@ server=/eoouoo.com/114.114.114.114
 server=/eoovoo.com/114.114.114.114
 server=/eoozoo.com/114.114.114.114
 server=/eoriver.com/114.114.114.114
+server=/eorygadw.com/114.114.114.114
 server=/eorzea.moe/114.114.114.114
 server=/eosantpool.com/114.114.114.114
 server=/eoss-hj.com/114.114.114.114
