--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28735,6 +28735,7 @@ server=/epjob88.com/114.114.114.114
 server=/epkey.com/114.114.114.114
 server=/eplove.com/114.114.114.114
 server=/epluspvy.com/114.114.114.114
+server=/epoch168.com/114.114.114.114
 server=/epoos.com/114.114.114.114
 server=/eprcw.com/114.114.114.114
 server=/eprezi.com/114.114.114.114
