--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28785,6 +28785,7 @@ server=/erapp.run/114.114.114.114
 server=/erbadu.com/114.114.114.114
 server=/erbingimg.com/114.114.114.114
 server=/ercc.cc/114.114.114.114
+server=/ercfh.com/114.114.114.114
 server=/erda.cloud/114.114.114.114
 server=/erdaicms.com/114.114.114.114
 server=/erdangame.xyz/114.114.114.114
