--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29020,6 +29020,7 @@ server=/etrack08.com/114.114.114.114
 server=/etradegx.com/114.114.114.114
 server=/etranshare.com/114.114.114.114
 server=/etrd.org/114.114.114.114
+server=/etroytj33.fun/114.114.114.114
 server=/etrump.net/114.114.114.114
 server=/ets100.com/114.114.114.114
 server=/etsc-tech.com/114.114.114.114
