--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29176,6 +29176,7 @@ server=/eworksglobal.com/114.114.114.114
 server=/eworldship.com/114.114.114.114
 server=/ewpeinfo.com/114.114.114.114
 server=/ewqcxz.com/114.114.114.114
+server=/ewqeq23.fun/114.114.114.114
 server=/ewsaas.com/114.114.114.114
 server=/ewstudy.com/114.114.114.114
 server=/ewt360.com/114.114.114.114
