--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29211,6 +29211,7 @@ server=/excel8.com/114.114.114.114
 server=/excel880.com/114.114.114.114
 server=/excelcn.com/114.114.114.114
 server=/excelhome.net/114.114.114.114
+server=/excellenceads.com/114.114.114.114
 server=/excelpx.com/114.114.114.114
 server=/exchen.net/114.114.114.114
 server=/excm.net/114.114.114.114
