accelerated-domains: add ezuon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29382,6 +29382,7 @@ server=/eztcn.com/114.114.114.114
 server=/eztest.org/114.114.114.114
 server=/eztvnet.com/114.114.114.114
 server=/ezucoo.com/114.114.114.114
+server=/ezuon.com/114.114.114.114
 server=/ezviz.com/114.114.114.114
 server=/ezwan.com/114.114.114.114
 server=/ezwanjia.com/114.114.114.114
