--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29880,6 +29880,7 @@ server=/faxingchina.com/114.114.114.114
 server=/faxingcn.com/114.114.114.114
 server=/faxingsj.com/114.114.114.114
 server=/faxingtupian.com/114.114.114.114
+server=/faxingzhan.com/114.114.114.114
 server=/faxiufang.com/114.114.114.114
 server=/faxuan.net/114.114.114.114
 server=/faxy-tech.com/114.114.114.114
