--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29895,6 +29895,7 @@ server=/fazz.fun/114.114.114.114
 server=/fb.mu/114.114.114.114
 server=/fbaichuan.com/114.114.114.114
 server=/fbank.com/114.114.114.114
+server=/fbaot.com/114.114.114.114
 server=/fbghrcqggrksty.com/114.114.114.114
 server=/fbi.college/114.114.114.114
 server=/fbirdsmall.com/114.114.114.114
