accelerated-domains: add fbieq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29898,6 +29898,7 @@ server=/fbank.com/114.114.114.114
 server=/fbaot.com/114.114.114.114
 server=/fbghrcqggrksty.com/114.114.114.114
 server=/fbi.college/114.114.114.114
+server=/fbieq.com/114.114.114.114
 server=/fbirdsmall.com/114.114.114.114
 server=/fbjsgf.com/114.114.114.114
 server=/fbkjapp.com/114.114.114.114
