--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29902,6 +29902,7 @@ server=/fbieq.com/114.114.114.114
 server=/fbirdsmall.com/114.114.114.114
 server=/fbjsgf.com/114.114.114.114
 server=/fbkjapp.com/114.114.114.114
+server=/fbku.com/114.114.114.114
 server=/fblife.com/114.114.114.114
 server=/fblsj.com/114.114.114.114
 server=/fbnxb.com/114.114.114.114
