accelerated-domains: add fccxgjg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29935,6 +29935,7 @@ server=/fcbu.com/114.114.114.114
 server=/fcchbj.com/114.114.114.114
 server=/fccs.com/114.114.114.114
 server=/fccscar.com/114.114.114.114
+server=/fccxgjg.com/114.114.114.114
 server=/fcczp.com/114.114.114.114
 server=/fcg01.com/114.114.114.114
 server=/fcg0770.com/114.114.114.114
