accelerated-domains: add fdaoo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30002,6 +30002,7 @@ server=/fd-trust.com/114.114.114.114
 server=/fd7c.com/114.114.114.114
 server=/fd80.com/114.114.114.114
 server=/fd80s.com/114.114.114.114
+server=/fdaoo.com/114.114.114.114
 server=/fdbatt.com/114.114.114.114
 server=/fdcyun.com/114.114.114.114
 server=/fdczbstatic.com/114.114.114.114
