accelerated-domains: add fefwe334.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30062,6 +30062,7 @@ server=/feeye.com/114.114.114.114
 server=/feeyeah.com/114.114.114.114
 server=/feeyo.com/114.114.114.114
 server=/feeyun.com/114.114.114.114
+server=/fefwe334.fun/114.114.114.114
 server=/fegine.com/114.114.114.114
 server=/feheadline.com/114.114.114.114
 server=/fehorizon.com/114.114.114.114
