--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30310,6 +30310,7 @@ server=/fengniao.com/114.114.114.114
 server=/fengniaohd.com/114.114.114.114
 server=/fengniaojianzhan.com/114.114.114.114
 server=/fengone.com/114.114.114.114
+server=/fengousm.com/114.114.114.114
 server=/fengpe.top/114.114.114.114
 server=/fengpengjun.com/114.114.114.114
 server=/fengpintech.com/114.114.114.114
