accelerated-domains: add fi11.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30494,6 +30494,7 @@ server=/fhyx.com/114.114.114.114
 server=/fhyx.hk/114.114.114.114
 server=/fi-play.com/114.114.114.114
 server=/fi0.cc/114.114.114.114
+server=/fi11.com/114.114.114.114
 server=/fi94.com/114.114.114.114
 server=/fia-china.com/114.114.114.114
 server=/fibercrops.com/114.114.114.114
