accelerated-domains: add fimky.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30528,6 +30528,7 @@ server=/film-yuelongchina.com/114.114.114.114
 server=/filtonbcn.com/114.114.114.114
 server=/fily.fun/114.114.114.114
 server=/fim34s.com/114.114.114.114
+server=/fimky.com/114.114.114.114
 server=/fimmu.com/114.114.114.114
 server=/fimvisual.com/114.114.114.114
 server=/fin-shine.com/114.114.114.114
