accelerated-domains: add fj95560.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30656,6 +30656,7 @@ server=/fj133165.com/114.114.114.114
 server=/fj173.net/114.114.114.114
 server=/fj2000.com/114.114.114.114
 server=/fj3c.net/114.114.114.114
+server=/fj95560.com/114.114.114.114
 server=/fj96336.com/114.114.114.114
 server=/fj987.com/114.114.114.114
 server=/fjadba.com/114.114.114.114
