--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30909,6 +30909,7 @@ server=/fm0754.com/114.114.114.114
 server=/fm0758.com/114.114.114.114
 server=/fm086.com/114.114.114.114
 server=/fm120.com/114.114.114.114
+server=/fm3838.com/114.114.114.114
 server=/fm4399.com/114.114.114.114
 server=/fm520.com/114.114.114.114
 server=/fm6w.com/114.114.114.114
