accelerated-domains: add formessengers.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31074,6 +31074,7 @@ server=/forkeji.com/114.114.114.114
 server=/forkliftnet.com/114.114.114.114
 server=/forlinx.com/114.114.114.114
 server=/form-create.com/114.114.114.114
+server=/formessengers.com/114.114.114.114
 server=/formtalk.net/114.114.114.114
 server=/formysql.com/114.114.114.114
 server=/fornature.com/114.114.114.114
