accelerated-domains: add frfve33.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31272,6 +31272,7 @@ server=/freshhema.com/114.114.114.114
 server=/freshippo.com/114.114.114.114
 server=/freshippomarket.com/114.114.114.114
 server=/freshnewsnet.com/114.114.114.114
+server=/frfve33.fun/114.114.114.114
 server=/frhelper.com/114.114.114.114
 server=/friendeye.com/114.114.114.114
 server=/friends-exchange.com/114.114.114.114
