--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31273,6 +31273,7 @@ server=/freshippo.com/114.114.114.114
 server=/freshippomarket.com/114.114.114.114
 server=/freshnewsnet.com/114.114.114.114
 server=/frfve33.fun/114.114.114.114
+server=/frgf99.fun/114.114.114.114
 server=/frhelper.com/114.114.114.114
 server=/friendeye.com/114.114.114.114
 server=/friends-exchange.com/114.114.114.114
