accelerated-domains: add frgre33.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31274,6 +31274,7 @@ server=/freshippomarket.com/114.114.114.114
 server=/freshnewsnet.com/114.114.114.114
 server=/frfve33.fun/114.114.114.114
 server=/frgf99.fun/114.114.114.114
+server=/frgre33.fun/114.114.114.114
 server=/frhelper.com/114.114.114.114
 server=/friendeye.com/114.114.114.114
 server=/friends-exchange.com/114.114.114.114
