--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31316,6 +31316,7 @@ server=/fs315.org/114.114.114.114
 server=/fs58.com/114.114.114.114
 server=/fs7000.com/114.114.114.114
 server=/fsabwy.com/114.114.114.114
+server=/fsb-bearing.com/114.114.114.114
 server=/fsbankonline.com/114.114.114.114
 server=/fsbqgd.com/114.114.114.114
 server=/fsccjy.com/114.114.114.114
