accelerated-domains: add fsdf45.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31329,6 +31329,7 @@ server=/fscmjt.com/114.114.114.114
 server=/fscsps.com/114.114.114.114
 server=/fsdafvdfu6796.asia/114.114.114.114
 server=/fsdaton.com/114.114.114.114
+server=/fsdf45.fun/114.114.114.114
 server=/fsdxzhpt.com/114.114.114.114
 server=/fsecity.com/114.114.114.114
 server=/fsemouse.com/114.114.114.114
