accelerated-domains: add fthcz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31428,6 +31428,7 @@ server=/ftesop.com/114.114.114.114
 server=/ftfast.com/114.114.114.114
 server=/ftfund.com/114.114.114.114
 server=/ftfx.ink/114.114.114.114
+server=/fthcz.com/114.114.114.114
 server=/fthformal.com/114.114.114.114
 server=/fthgz.com/114.114.114.114
 server=/fthimalayandb.com/114.114.114.114
