accelerated-domains: add fujianryt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31502,6 +31502,7 @@ server=/fujiabin.com/114.114.114.114
 server=/fujiangames.com/114.114.114.114
 server=/fujianmei.com/114.114.114.114
 server=/fujianrc.com/114.114.114.114
+server=/fujianryt.com/114.114.114.114
 server=/fujiansme.com/114.114.114.114
 server=/fujianyinruan.com/114.114.114.114
 server=/fujincenter.com/114.114.114.114
