accelerated-domains: add fwccw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31691,6 +31691,7 @@ server=/fw-12365.com/114.114.114.114
 server=/fw365.online/114.114.114.114
 server=/fw4.co/114.114.114.114
 server=/fw4.me/114.114.114.114
+server=/fwccw.com/114.114.114.114
 server=/fwcfwg.com/114.114.114.114
 server=/fwcranes.com/114.114.114.114
 server=/fwcx315.com/114.114.114.114
