accelerated-domains: add fwsfwef2.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31704,6 +31704,7 @@ server=/fwqbdn.com/114.114.114.114
 server=/fwqlt.com/114.114.114.114
 server=/fwqtg.net/114.114.114.114
 server=/fwqur86.com/114.114.114.114
+server=/fwsfwef2.fun/114.114.114.114
 server=/fwsir.com/114.114.114.114
 server=/fwt0.com/114.114.114.114
 server=/fwtoys.com/114.114.114.114
