--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31808,6 +31808,7 @@ server=/fygmbc.com/114.114.114.114
 server=/fygsoft.com/114.114.114.114
 server=/fyigou.com/114.114.114.114
 server=/fyjsz.net/114.114.114.114
+server=/fyjyhm.com/114.114.114.114
 server=/fylcg.com/114.114.114.114
 server=/fyluo.com/114.114.114.114
 server=/fymall2.com/114.114.114.114
