accelerated-domains: add fzglqyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31864,6 +31864,7 @@ server=/fzfrp.com/114.114.114.114
 server=/fzfzjx.com/114.114.114.114
 server=/fzg360.com/114.114.114.114
 server=/fzghy.com/114.114.114.114
+server=/fzglqyy.com/114.114.114.114
 server=/fzgolden.com/114.114.114.114
 server=/fzhlkx.com/114.114.114.114
 server=/fzhqzx.net/114.114.114.114
