--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31880,6 +31880,7 @@ server=/fzlbar.com/114.114.114.114
 server=/fzlean.com/114.114.114.114
 server=/fzlft.com/114.114.114.114
 server=/fzlizhi.net/114.114.114.114
+server=/fzlm.net/114.114.114.114
 server=/fzlol.com/114.114.114.114
 server=/fzmama.net/114.114.114.114
 server=/fzmeetdecor.com/114.114.114.114
