--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31912,6 +31912,7 @@ server=/g-biomed.com/114.114.114.114
 server=/g-medon.com/114.114.114.114
 server=/g-tar.com/114.114.114.114
 server=/g-var.com/114.114.114.114
+server=/g11edashb1.fun/114.114.114.114
 server=/g12345.com/114.114.114.114
 server=/g12e.com/114.114.114.114
 server=/g12e.org/114.114.114.114
