accelerated-domains: add g4y7uuk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31936,6 +31936,7 @@ server=/g3voip.com/114.114.114.114
 server=/g3wei.com/114.114.114.114
 server=/g41i.icu/114.114.114.114
 server=/g4weixin.com/114.114.114.114
+server=/g4y7uuk.com/114.114.114.114
 server=/g59p.com/114.114.114.114
 server=/g5h4.com/114.114.114.114
 server=/g5kj.com/114.114.114.114
