--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31942,6 +31942,7 @@ server=/g5h4.com/114.114.114.114
 server=/g5kj.com/114.114.114.114
 server=/g66667777.com/114.114.114.114
 server=/g6a7qkh.xyz/114.114.114.114
+server=/g6tgashb.fun/114.114.114.114
 server=/g77775555.com/114.114.114.114
 server=/g77776666.com/114.114.114.114
 server=/g80mx.com/114.114.114.114
