--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31945,6 +31945,7 @@ server=/g6a7qkh.xyz/114.114.114.114
 server=/g6tgashb.fun/114.114.114.114
 server=/g77775555.com/114.114.114.114
 server=/g77776666.com/114.114.114.114
+server=/g7ghdash2.fun/114.114.114.114
 server=/g80mx.com/114.114.114.114
 server=/g88885555.com/114.114.114.114
 server=/g88886666.com/114.114.114.114
