--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32071,6 +32071,7 @@ server=/gamefm.com/114.114.114.114
 server=/gamegamept.com/114.114.114.114
 server=/gamege.com/114.114.114.114
 server=/gameggg.com/114.114.114.114
+server=/gamehaopu.com/114.114.114.114
 server=/gamehome.tv/114.114.114.114
 server=/gameinns.com/114.114.114.114
 server=/gamejym.com/114.114.114.114
