accelerated-domains: add gasxf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32306,6 +32306,7 @@ server=/gashr.com/114.114.114.114
 server=/gaspeedup.com/114.114.114.114
 server=/gasshow.com/114.114.114.114
 server=/gastronomy.gov.mo/114.114.114.114
+server=/gasxf.com/114.114.114.114
 server=/gaszx.com/114.114.114.114
 server=/gate-dhgames.com/114.114.114.114
 server=/gateface.com/114.114.114.114
