accelerated-domains: add gbfedashb4.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32325,6 +32325,7 @@ server=/gbasebi.com/114.114.114.114
 server=/gbcnvip15.com/114.114.114.114
 server=/gbdex.com/114.114.114.114
 server=/gbdz.net/114.114.114.114
+server=/gbfedashb4.fun/114.114.114.114
 server=/gbgba.com/114.114.114.114
 server=/gbhome.com/114.114.114.114
 server=/gbi324.com/114.114.114.114
