--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32327,6 +32327,7 @@ server=/gbdex.com/114.114.114.114
 server=/gbdz.net/114.114.114.114
 server=/gbfedashb4.fun/114.114.114.114
 server=/gbgba.com/114.114.114.114
+server=/gbgedashb8.fun/114.114.114.114
 server=/gbhome.com/114.114.114.114
 server=/gbi324.com/114.114.114.114
 server=/gbiac.net/114.114.114.114
