accelerated-domains: add gbndash2.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32335,6 +32335,7 @@ server=/gbicdn.com/114.114.114.114
 server=/gbicom.com/114.114.114.114
 server=/gbictc.com/114.114.114.114
 server=/gblhgk.com/114.114.114.114
+server=/gbndash2.fun/114.114.114.114
 server=/gbofd.com/114.114.114.114
 server=/gbox.pub/114.114.114.114
 server=/gbox.run/114.114.114.114
