accelerated-domains: add gcaih.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32357,6 +32357,7 @@ server=/gc600.com/114.114.114.114
 server=/gc91.com/114.114.114.114
 server=/gcable.tv/114.114.114.114
 server=/gcademy.net/114.114.114.114
+server=/gcaih.com/114.114.114.114
 server=/gcbtgh26.xyz/114.114.114.114
 server=/gccdn.net/114.114.114.114
 server=/gcchina.com/114.114.114.114
