accelerated-domains: add gcouh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32387,6 +32387,7 @@ server=/gcmc.cc/114.114.114.114
 server=/gcok.com/114.114.114.114
 server=/gcoreinc.com/114.114.114.114
 server=/gcores.com/114.114.114.114
+server=/gcouh.com/114.114.114.114
 server=/gcpunion.org/114.114.114.114
 server=/gcs66.com/114.114.114.114
 server=/gcscmp.com/114.114.114.114
