--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32398,6 +32398,7 @@ server=/gctianshanxh.com/114.114.114.114
 server=/gctong.com/114.114.114.114
 server=/gctzsh.com/114.114.114.114
 server=/gcvcdashb2.fun/114.114.114.114
+server=/gcvgedashb3.fun/114.114.114.114
 server=/gcwduoduo.com/114.114.114.114
 server=/gcwith.com/114.114.114.114
 server=/gcyts.com/114.114.114.114
