--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32425,6 +32425,7 @@ server=/gda086.com/114.114.114.114
 server=/gdadjs.com/114.114.114.114
 server=/gdadri.com/114.114.114.114
 server=/gdahua.com/114.114.114.114
+server=/gdaii.com/114.114.114.114
 server=/gdapi.net/114.114.114.114
 server=/gdatacube.net/114.114.114.114
 server=/gdbbk.com/114.114.114.114
