--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32590,6 +32590,7 @@ server=/gdtz888.com/114.114.114.114
 server=/gdu-tech.com/114.114.114.114
 server=/gduaee.com/114.114.114.114
 server=/gdunis.com/114.114.114.114
+server=/gdunt.com/114.114.114.114
 server=/gdupi.com/114.114.114.114
 server=/gdutbbs.com/114.114.114.114
 server=/gdvolunteer.net/114.114.114.114
