--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32639,6 +32639,7 @@ server=/gdzzz.com/114.114.114.114
 server=/ge-garden.net/114.114.114.114
 server=/ge-stralen.com/114.114.114.114
 server=/ge100.com/114.114.114.114
+server=/ge3shbdf1.fun/114.114.114.114
 server=/geakr.com/114.114.114.114
 server=/geality.com/114.114.114.114
 server=/geapu.com/114.114.114.114
