--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32656,6 +32656,7 @@ server=/gebinwang666.com/114.114.114.114
 server=/gebiqu.com/114.114.114.114
 server=/gec123.com/114.114.114.114
 server=/gecimi.com/114.114.114.114
+server=/gedafdshb7.fun/114.114.114.114
 server=/gedi2099.com/114.114.114.114
 server=/gedou8.com/114.114.114.114
 server=/gedoumi.com/114.114.114.114
