accelerated-domains: add gedashb112.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32657,6 +32657,7 @@ server=/gebiqu.com/114.114.114.114
 server=/gec123.com/114.114.114.114
 server=/gecimi.com/114.114.114.114
 server=/gedafdshb7.fun/114.114.114.114
+server=/gedashb112.fun/114.114.114.114
 server=/gedi2099.com/114.114.114.114
 server=/gedou8.com/114.114.114.114
 server=/gedoumi.com/114.114.114.114
