accelerated-domains: add geddsashb3.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32658,6 +32658,7 @@ server=/gec123.com/114.114.114.114
 server=/gecimi.com/114.114.114.114
 server=/gedafdshb7.fun/114.114.114.114
 server=/gedashb112.fun/114.114.114.114
+server=/geddsashb3.fun/114.114.114.114
 server=/gedi2099.com/114.114.114.114
 server=/gedou8.com/114.114.114.114
 server=/gedoumi.com/114.114.114.114
