accelerated-domains: add gedxssashb8.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32663,6 +32663,7 @@ server=/gedi2099.com/114.114.114.114
 server=/gedou8.com/114.114.114.114
 server=/gedoumi.com/114.114.114.114
 server=/gedu.org/114.114.114.114
+server=/gedxssashb8.fun/114.114.114.114
 server=/geeboo.com/114.114.114.114
 server=/geebook.com/114.114.114.114
 server=/geedai.com/114.114.114.114
