accelerated-domains: add geewdashb3.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32726,6 +32726,7 @@ server=/geespace.com/114.114.114.114
 server=/geetest.com/114.114.114.114
 server=/geevisit.com/114.114.114.114
 server=/geewaza.com/114.114.114.114
+server=/geewdashb3.fun/114.114.114.114
 server=/geexek.com/114.114.114.114
 server=/geezn.com/114.114.114.114
 server=/gegame.site/114.114.114.114
