--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32774,6 +32774,7 @@ server=/genban.org/114.114.114.114
 server=/gendan5.com/114.114.114.114
 server=/gendantong.com/114.114.114.114
 server=/generalwatertech.com/114.114.114.114
+server=/genericfixer.com/114.114.114.114
 server=/generosbio.com/114.114.114.114
 server=/genesis-rock.com/114.114.114.114
 server=/geneskies.com/114.114.114.114
