accelerated-domains: add geqshb22.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32827,6 +32827,7 @@ server=/geovisearth.com/114.114.114.114
 server=/gepresearch.com/114.114.114.114
 server=/gepubbs.com/114.114.114.114
 server=/gepush.com/114.114.114.114
+server=/geqshb22.fun/114.114.114.114
 server=/gequdaquan.net/114.114.114.114
 server=/gerenjianli.com/114.114.114.114
 server=/gerhard-china.com/114.114.114.114
