--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32834,6 +32834,7 @@ server=/gerhard-china.com/114.114.114.114
 server=/geruihuate.com/114.114.114.114
 server=/gesanghua.org/114.114.114.114
 server=/gescosteel.com/114.114.114.114
+server=/gesdxashb1.fun/114.114.114.114
 server=/gesedna.com/114.114.114.114
 server=/gesep.com/114.114.114.114
 server=/geshitong.net/114.114.114.114
