accelerated-domains: add gesfdashb5.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32837,6 +32837,7 @@ server=/gescosteel.com/114.114.114.114
 server=/gesdxashb1.fun/114.114.114.114
 server=/gesedna.com/114.114.114.114
 server=/gesep.com/114.114.114.114
+server=/gesfdashb5.fun/114.114.114.114
 server=/geshitong.net/114.114.114.114
 server=/geshui.com/114.114.114.114
 server=/geshui100.com/114.114.114.114
