accelerated-domains: add gessdashb6.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32842,6 +32842,7 @@ server=/geshitong.net/114.114.114.114
 server=/geshui.com/114.114.114.114
 server=/geshui100.com/114.114.114.114
 server=/geshui99.com/114.114.114.114
+server=/gessdashb6.fun/114.114.114.114
 server=/gesuo.com/114.114.114.114
 server=/geswl.com/114.114.114.114
 server=/get-shell.com/114.114.114.114
