accelerated-domains: add gesvfvfhhb6.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32844,6 +32844,7 @@ server=/geshui100.com/114.114.114.114
 server=/geshui99.com/114.114.114.114
 server=/gessdashb6.fun/114.114.114.114
 server=/gesuo.com/114.114.114.114
+server=/gesvfvfhhb6.fun/114.114.114.114
 server=/geswl.com/114.114.114.114
 server=/get-shell.com/114.114.114.114
 server=/get.vip/114.114.114.114
