accelerated-domains: add getsays.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32865,6 +32865,7 @@ server=/getmarkman.com/114.114.114.114
 server=/getnurseanesthesiologistjobs.com/114.114.114.114
 server=/getquicker.net/114.114.114.114
 server=/getrebuild.com/114.114.114.114
+server=/getsays.com/114.114.114.114
 server=/getsetgadget.com/114.114.114.114
 server=/getsurfboard.com/114.114.114.114
 server=/gettopacoustic.com/114.114.114.114
