accelerated-domains: add gewqashbwq.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32879,6 +32879,7 @@ server=/geuba.xyz/114.114.114.114
 server=/gewala.com/114.114.114.114
 server=/gewara.com/114.114.114.114
 server=/geweng.com/114.114.114.114
+server=/gewqashbwq.fun/114.114.114.114
 server=/gewu.vc/114.114.114.114
 server=/gewuer.com/114.114.114.114
 server=/gewuzhixiang.com/114.114.114.114
