accelerated-domains: add gffedashb6.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32922,6 +32922,7 @@ server=/gfdns.net/114.114.114.114
 server=/gfdsa.net/114.114.114.114
 server=/gfdwsx.com/114.114.114.114
 server=/gfedu.com/114.114.114.114
+server=/gffedashb6.fun/114.114.114.114
 server=/gffirm.com/114.114.114.114
 server=/gffwq.com/114.114.114.114
 server=/gfglb.com/114.114.114.114
