--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32932,6 +32932,7 @@ server=/gfjl.org/114.114.114.114
 server=/gflt.net/114.114.114.114
 server=/gflz.com/114.114.114.114
 server=/gfmpv.com/114.114.114.114
+server=/gfnormal00ar.com/114.114.114.114
 server=/gfnormal02ak.com/114.114.114.114
 server=/gfnormal04an.com/114.114.114.114
 server=/gforward.org/114.114.114.114
