--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32934,6 +32934,7 @@ server=/gflz.com/114.114.114.114
 server=/gfmpv.com/114.114.114.114
 server=/gfnormal00ar.com/114.114.114.114
 server=/gfnormal01aa.com/114.114.114.114
+server=/gfnormal01aj.com/114.114.114.114
 server=/gfnormal02ak.com/114.114.114.114
 server=/gfnormal04an.com/114.114.114.114
 server=/gforward.org/114.114.114.114
