--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32937,6 +32937,7 @@ server=/gfnormal01aa.com/114.114.114.114
 server=/gfnormal01aj.com/114.114.114.114
 server=/gfnormal02ak.com/114.114.114.114
 server=/gfnormal04an.com/114.114.114.114
+server=/gfnormal07ab.com/114.114.114.114
 server=/gforward.org/114.114.114.114
 server=/gfoxsoft.net/114.114.114.114
 server=/gfren.org/114.114.114.114
