accelerated-domains: add gfvip00an.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32951,6 +32951,7 @@ server=/gfun.me/114.114.114.114
 server=/gfund.com/114.114.114.114
 server=/gfvip00ae.com/114.114.114.114
 server=/gfvip00aj.com/114.114.114.114
+server=/gfvip00an.com/114.114.114.114
 server=/gfvip02aj.com/114.114.114.114
 server=/gfvip02ak.com/114.114.114.114
 server=/gfvip04an.com/114.114.114.114
