--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32952,6 +32952,7 @@ server=/gfund.com/114.114.114.114
 server=/gfvip00ae.com/114.114.114.114
 server=/gfvip00aj.com/114.114.114.114
 server=/gfvip00an.com/114.114.114.114
+server=/gfvip00ao.com/114.114.114.114
 server=/gfvip02aj.com/114.114.114.114
 server=/gfvip02ak.com/114.114.114.114
 server=/gfvip04an.com/114.114.114.114
