--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32957,6 +32957,7 @@ server=/gfvip01am.com/114.114.114.114
 server=/gfvip02aj.com/114.114.114.114
 server=/gfvip02ak.com/114.114.114.114
 server=/gfvip04an.com/114.114.114.114
+server=/gfvip05aj.com/114.114.114.114
 server=/gfvip08am.com/114.114.114.114
 server=/gfxaa.com/114.114.114.114
 server=/gfxcamp.com/114.114.114.114
