--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32958,6 +32958,7 @@ server=/gfvip02aj.com/114.114.114.114
 server=/gfvip02ak.com/114.114.114.114
 server=/gfvip04an.com/114.114.114.114
 server=/gfvip05aj.com/114.114.114.114
+server=/gfvip06ae.com/114.114.114.114
 server=/gfvip08am.com/114.114.114.114
 server=/gfxaa.com/114.114.114.114
 server=/gfxcamp.com/114.114.114.114
