--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32960,6 +32960,7 @@ server=/gfvip04an.com/114.114.114.114
 server=/gfvip05aj.com/114.114.114.114
 server=/gfvip06ae.com/114.114.114.114
 server=/gfvip06am.com/114.114.114.114
+server=/gfvip06as.com/114.114.114.114
 server=/gfvip08am.com/114.114.114.114
 server=/gfxaa.com/114.114.114.114
 server=/gfxcamp.com/114.114.114.114
