--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32962,6 +32962,7 @@ server=/gfvip06ae.com/114.114.114.114
 server=/gfvip06am.com/114.114.114.114
 server=/gfvip06as.com/114.114.114.114
 server=/gfvip06at.com/114.114.114.114
+server=/gfvip07am.com/114.114.114.114
 server=/gfvip08am.com/114.114.114.114
 server=/gfxaa.com/114.114.114.114
 server=/gfxcamp.com/114.114.114.114
