--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32965,6 +32965,7 @@ server=/gfvip06at.com/114.114.114.114
 server=/gfvip07am.com/114.114.114.114
 server=/gfvip07ao.com/114.114.114.114
 server=/gfvip08ag.com/114.114.114.114
+server=/gfvip08ah.com/114.114.114.114
 server=/gfvip08am.com/114.114.114.114
 server=/gfxaa.com/114.114.114.114
 server=/gfxcamp.com/114.114.114.114
