--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32996,6 +32996,7 @@ server=/ggecgc.com/114.114.114.114
 server=/ggemo.com/114.114.114.114
 server=/ggeye.com/114.114.114.114
 server=/ggfcyy.com/114.114.114.114
+server=/ggfdgd88.fun/114.114.114.114
 server=/ggfsfy.com/114.114.114.114
 server=/ggfswy.com/114.114.114.114
 server=/ggg42.com/114.114.114.114
