accelerated-domains: add ggouh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33036,6 +33036,7 @@ server=/ggnops.com/114.114.114.114
 server=/ggnqmy.com/114.114.114.114
 server=/ggo.la/114.114.114.114
 server=/ggo.net/114.114.114.114
+server=/ggouh.com/114.114.114.114
 server=/ggqdnkyy.com/114.114.114.114
 server=/ggqule.com/114.114.114.114
 server=/ggqunshanmuye.com/114.114.114.114
