--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33076,6 +33076,7 @@ server=/ggyoupinshu.com/114.114.114.114
 server=/ggyouyu.com/114.114.114.114
 server=/ggysc.com/114.114.114.114
 server=/ggysfw.com/114.114.114.114
+server=/ggytc.com/114.114.114.114
 server=/ggyx666.com/114.114.114.114
 server=/ggyy100.com/114.114.114.114
 server=/ggzbbj.com/114.114.114.114
