--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33103,6 +33103,7 @@ server=/ghgy.com/114.114.114.114
 server=/ghhyjc.com/114.114.114.114
 server=/ghibliwiki.org/114.114.114.114
 server=/ghitest.com/114.114.114.114
+server=/ghiuge55.fun/114.114.114.114
 server=/ghjbh123.com/114.114.114.114
 server=/ghlawyer.net/114.114.114.114
 server=/ghlearning.com/114.114.114.114
