--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33105,6 +33105,7 @@ server=/ghibliwiki.org/114.114.114.114
 server=/ghitest.com/114.114.114.114
 server=/ghiuge55.fun/114.114.114.114
 server=/ghjbh123.com/114.114.114.114
+server=/ghjedashb6.fun/114.114.114.114
 server=/ghlawyer.net/114.114.114.114
 server=/ghlearning.com/114.114.114.114
 server=/ghlshb.com/114.114.114.114
