accelerated-domains: add gjiak.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33268,6 +33268,7 @@ server=/gjdwzp.com/114.114.114.114
 server=/gjfmxd.com/114.114.114.114
 server=/gjgzpw.com/114.114.114.114
 server=/gjhgroup.com/114.114.114.114
+server=/gjiak.com/114.114.114.114
 server=/gjj5.com/114.114.114.114
 server=/gjjcxw.com/114.114.114.114
 server=/gjjnhb.com/114.114.114.114
