--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33274,6 +33274,7 @@ server=/gjjcxw.com/114.114.114.114
 server=/gjjnhb.com/114.114.114.114
 server=/gjjsbz.com/114.114.114.114
 server=/gjjskhdnm.top/114.114.114.114
+server=/gjkkdashb4.fun/114.114.114.114
 server=/gjmbwxpt.com/114.114.114.114
 server=/gjmbwxzx.com/114.114.114.114
 server=/gjmrk.com/114.114.114.114
