accelerated-domains: add gjmedashb0.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33277,6 +33277,7 @@ server=/gjjskhdnm.top/114.114.114.114
 server=/gjkkdashb4.fun/114.114.114.114
 server=/gjmbwxpt.com/114.114.114.114
 server=/gjmbwxzx.com/114.114.114.114
+server=/gjmedashb0.fun/114.114.114.114
 server=/gjmrk.com/114.114.114.114
 server=/gjnlyd.com/114.114.114.114
 server=/gjpdh.com/114.114.114.114
