--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33279,6 +33279,7 @@ server=/gjmbwxpt.com/114.114.114.114
 server=/gjmbwxzx.com/114.114.114.114
 server=/gjmedashb0.fun/114.114.114.114
 server=/gjmrk.com/114.114.114.114
+server=/gjnbf.com/114.114.114.114
 server=/gjnlyd.com/114.114.114.114
 server=/gjpdh.com/114.114.114.114
 server=/gjrwls.com/114.114.114.114
