--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33331,6 +33331,7 @@ server=/gkshuju.com/114.114.114.114
 server=/gktianshanjd.com/114.114.114.114
 server=/gkwo.net/114.114.114.114
 server=/gkxd.com/114.114.114.114
+server=/gkxs.com/114.114.114.114
 server=/gkyly.com/114.114.114.114
 server=/gkzhan.com/114.114.114.114
 server=/gkzj.net/114.114.114.114
