accelerated-domains: add gleij.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33398,6 +33398,7 @@ server=/gldaewoo.com/114.114.114.114
 server=/gldxjc.com/114.114.114.114
 server=/gleasy.com/114.114.114.114
 server=/glecan.com/114.114.114.114
+server=/gleij.com/114.114.114.114
 server=/gleyy.com/114.114.114.114
 server=/glface.com/114.114.114.114
 server=/glfangzhen.com/114.114.114.114
