accelerated-domains: add gmnetworks.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33675,6 +33675,7 @@ server=/gmmch5.com/114.114.114.114
 server=/gmmicro.com/114.114.114.114
 server=/gmmsj.com/114.114.114.114
 server=/gmmtcc.com/114.114.114.114
+server=/gmnetworks.net/114.114.114.114
 server=/gmoe.cc/114.114.114.114
 server=/gmonline-all.com/114.114.114.114
 server=/gmpanel.com/114.114.114.114
