accelerated-domains: add gneec3.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33718,6 +33718,7 @@ server=/gnber.com/114.114.114.114
 server=/gndaily.com/114.114.114.114
 server=/gndown.com/114.114.114.114
 server=/gneec.com/114.114.114.114
+server=/gneec3.com/114.114.114.114
 server=/gneedu.com/114.114.114.114
 server=/gnehr.com/114.114.114.114
 server=/gnete.com/114.114.114.114
