--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33719,6 +33719,7 @@ server=/gndaily.com/114.114.114.114
 server=/gndown.com/114.114.114.114
 server=/gneec.com/114.114.114.114
 server=/gneec3.com/114.114.114.114
+server=/gneec4.com/114.114.114.114
 server=/gneedu.com/114.114.114.114
 server=/gnehr.com/114.114.114.114
 server=/gnete.com/114.114.114.114
