accelerated-domains: add gqwwshbdd1.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34221,6 +34221,7 @@ server=/gqsoso.com/114.114.114.114
 server=/gqsyk.com/114.114.114.114
 server=/gqsym.com/114.114.114.114
 server=/gqt168.com/114.114.114.114
+server=/gqwwshbdd1.fun/114.114.114.114
 server=/gqxtq.com/114.114.114.114
 server=/gra-moissanitesorg.com/114.114.114.114
 server=/grablan.com/114.114.114.114
