--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34223,6 +34223,7 @@ server=/gqsym.com/114.114.114.114
 server=/gqt168.com/114.114.114.114
 server=/gqwwshbdd1.fun/114.114.114.114
 server=/gqxtq.com/114.114.114.114
+server=/gr3xuaov74khb.com/114.114.114.114
 server=/gra-moissanitesorg.com/114.114.114.114
 server=/grablan.com/114.114.114.114
 server=/grabsun.com/114.114.114.114
