--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34298,6 +34298,7 @@ server=/greplay.com/114.114.114.114
 server=/grescw.com/114.114.114.114
 server=/gretaith.com/114.114.114.114
 server=/gretf.com/114.114.114.114
+server=/grewash1b.fun/114.114.114.114
 server=/greyli.com/114.114.114.114
 server=/greywolfcdn.net/114.114.114.114
 server=/greywolffast.com/114.114.114.114
