accelerated-domains: add groupiklan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34333,6 +34333,7 @@ server=/group-purchasing.com/114.114.114.114
 server=/group-spl.com/114.114.114.114
 server=/group.citic/114.114.114.114
 server=/groupfangyuan.com/114.114.114.114
+server=/groupiklan.com/114.114.114.114
 server=/groupjx.com/114.114.114.114
 server=/grouplus.com/114.114.114.114
 server=/groupshenxi.com/114.114.114.114
