--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34375,6 +34375,7 @@ server=/gscblog.com/114.114.114.114
 server=/gscdn.pub/114.114.114.114
 server=/gscidc.net/114.114.114.114
 server=/gscm.tv/114.114.114.114
+server=/gsdedash9b.fun/114.114.114.114
 server=/gsdk.tv/114.114.114.114
 server=/gsdpw.com/114.114.114.114
 server=/gsdswz.com/114.114.114.114
