--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34443,6 +34443,7 @@ server=/gstzyyy.com/114.114.114.114
 server=/gsuus.com/114.114.114.114
 server=/gsvws.com/114.114.114.114
 server=/gswjxjzx.com/114.114.114.114
+server=/gswtol.com/114.114.114.114
 server=/gswz.com/114.114.114.114
 server=/gsx009.com/114.114.114.114
 server=/gsxb.net/114.114.114.114
