accelerated-domains: add gtdf33.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34480,6 +34480,7 @@ server=/gtbrowser.com/114.114.114.114
 server=/gtcedu.com/114.114.114.114
 server=/gtcim.com/114.114.114.114
 server=/gtder.club/114.114.114.114
+server=/gtdf33.fun/114.114.114.114
 server=/gtdgc.com/114.114.114.114
 server=/gtdlife.com/114.114.114.114
 server=/gtdreamlife.com/114.114.114.114
