--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34609,6 +34609,7 @@ server=/guanche56.com/114.114.114.114
 server=/guanchiad.com/114.114.114.114
 server=/guancibaoku.com/114.114.114.114
 server=/guandan.com/114.114.114.114
+server=/guandan.mobi/114.114.114.114
 server=/guandang.net/114.114.114.114
 server=/guandata.com/114.114.114.114
 server=/guandianle.com/114.114.114.114
