--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34692,6 +34692,7 @@ server=/guangyinghj.com/114.114.114.114
 server=/guangyinglvxing.com/114.114.114.114
 server=/guangyuanjt.com/114.114.114.114
 server=/guangyuhb.com/114.114.114.114
+server=/guangyukeji.com/114.114.114.114
 server=/guangyv.com/114.114.114.114
 server=/guangzhitui.com/114.114.114.114
 server=/guangzhou-logistics.com/114.114.114.114
