accelerated-domains: add guangzizai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34702,6 +34702,7 @@ server=/guangzhouyibo.com/114.114.114.114
 server=/guangzhouyizheng.com/114.114.114.114
 server=/guangzhouzaiyu.com/114.114.114.114
 server=/guangzhuiyuan.com/114.114.114.114
+server=/guangzizai.com/114.114.114.114
 server=/guangzjiaq.com/114.114.114.114
 server=/guanhaobio.com/114.114.114.114
 server=/guanhou.com/114.114.114.114
