accelerated-domains: add guizhouxinsheng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34889,6 +34889,7 @@ server=/guizhoudesheng.com/114.114.114.114
 server=/guizhougames.com/114.114.114.114
 server=/guizhounaishili.com/114.114.114.114
 server=/guizhoushengyang.com/114.114.114.114
+server=/guizhouxinsheng.com/114.114.114.114
 server=/guizhutanglao.com/114.114.114.114
 server=/gujianba.com/114.114.114.114
 server=/gujinshici.com/114.114.114.114
