accelerated-domains: add guominziben.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35002,6 +35002,7 @@ server=/guomeikuaidi.com/114.114.114.114
 server=/guomiaokeji.com/114.114.114.114
 server=/guomin999.com/114.114.114.114
 server=/guominpension.com/114.114.114.114
+server=/guominziben.com/114.114.114.114
 server=/guomob.com/114.114.114.114
 server=/guomu.com/114.114.114.114
 server=/guomuedu.com/114.114.114.114
