--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35132,6 +35132,7 @@ server=/gvlocalization.com/114.114.114.114
 server=/gvnpjzn.com/114.114.114.114
 server=/gvoiceplat.com/114.114.114.114
 server=/gvvbd.com/114.114.114.114
+server=/gvvedashb6.fun/114.114.114.114
 server=/gvzen.com/114.114.114.114
 server=/gw-dv.vip/114.114.114.114
 server=/gw-ec.com/114.114.114.114
