accelerated-domains: add gwkvepgc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35159,6 +35159,7 @@ server=/gwidc.com/114.114.114.114
 server=/gwin-cn.com/114.114.114.114
 server=/gwjakzzx.com/114.114.114.114
 server=/gwjinan.com/114.114.114.114
+server=/gwkvepgc.com/114.114.114.114
 server=/gwm-global.com/114.114.114.114
 server=/gwmapp-h.com/114.114.114.114
 server=/gwmfc.com/114.114.114.114
