accelerated-domains: add gxunj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36813,6 +36813,7 @@ server=/gxufl.com/114.114.114.114
 server=/gxufz.com/114.114.114.114
 server=/gxuit.com/114.114.114.114
 server=/gxumi.com/114.114.114.114
+server=/gxunj.com/114.114.114.114
 server=/gxupdi.com/114.114.114.114
 server=/gxups.com/114.114.114.114
 server=/gxuzf.com/114.114.114.114
