--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36878,6 +36878,7 @@ server=/gxwzjt.com/114.114.114.114
 server=/gxwzjx.com/114.114.114.114
 server=/gxwzlhh.com/114.114.114.114
 server=/gxwzsz.com/114.114.114.114
+server=/gxwztv.com/114.114.114.114
 server=/gxwzxhyq.com/114.114.114.114
 server=/gxwzyl.com/114.114.114.114
 server=/gxxaws.com/114.114.114.114
