accelerated-domains: add gxxie.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36920,6 +36920,7 @@ server=/gxxiangxing.com/114.114.114.114
 server=/gxxiangyi88.com/114.114.114.114
 server=/gxxiaofu.com/114.114.114.114
 server=/gxxiaolong.net/114.114.114.114
+server=/gxxie.com/114.114.114.114
 server=/gxxielang.com/114.114.114.114
 server=/gxxijiang.com/114.114.114.114
 server=/gxxilin.com/114.114.114.114
