--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37445,6 +37445,7 @@ server=/gzdysx.com/114.114.114.114
 server=/gzenxx.com/114.114.114.114
 server=/gzexpo.com/114.114.114.114
 server=/gzfc.net/114.114.114.114
+server=/gzfenda.com/114.114.114.114
 server=/gzfengmao.com/114.114.114.114
 server=/gzfezx.com/114.114.114.114
 server=/gzfin.com/114.114.114.114
