accelerated-domains: add h4k5.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37718,6 +37718,7 @@ server=/h3wog.com/114.114.114.114
 server=/h3yun.com/114.114.114.114
 server=/h4088.com/114.114.114.114
 server=/h4532.com/114.114.114.114
+server=/h4k5.com/114.114.114.114
 server=/h5-share.com/114.114.114.114
 server=/h5-x.com/114.114.114.114
 server=/h5-yes.com/114.114.114.114
