accelerated-domains: add h576.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37728,6 +37728,7 @@ server=/h5495.com/114.114.114.114
 server=/h554.com/114.114.114.114
 server=/h556.life/114.114.114.114
 server=/h55u.com/114.114.114.114
+server=/h576.com/114.114.114.114
 server=/h5abc.com/114.114.114.114
 server=/h5aiwan.com/114.114.114.114
 server=/h5anli.com/114.114.114.114
