--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37762,6 +37762,7 @@ server=/h5shuo.com/114.114.114.114
 server=/h5taotao.com/114.114.114.114
 server=/h5tpl.com/114.114.114.114
 server=/h5uc.com/114.114.114.114
+server=/h5util.com/114.114.114.114
 server=/h5war.com/114.114.114.114
 server=/h5youxi.com/114.114.114.114
 server=/h5yunban.com/114.114.114.114
