accelerated-domains: add haili-spitzer.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37901,6 +37901,7 @@ server=/haijudoc.com/114.114.114.114
 server=/haijunda.com/114.114.114.114
 server=/haikeoutdoor.com/114.114.114.114
 server=/haiketrip.com/114.114.114.114
+server=/haili-spitzer.com/114.114.114.114
 server=/hailiang.com/114.114.114.114
 server=/hailiangedu.com/114.114.114.114
 server=/hailiangip.com/114.114.114.114
