accelerated-domains: add hainan.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37926,6 +37926,7 @@ server=/haimin.net/114.114.114.114
 server=/haimini.com/114.114.114.114
 server=/haina.com/114.114.114.114
 server=/hainajc.com/114.114.114.114
+server=/hainan.net/114.114.114.114
 server=/hainan0898.net/114.114.114.114
 server=/hainanairlines.com/114.114.114.114
 server=/hainancom.com/114.114.114.114
