accelerated-domains: add haizhangs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38051,6 +38051,7 @@ server=/haiyong.site/114.114.114.114
 server=/haiyuangabion.com/114.114.114.114
 server=/haiyuangabiou.com/114.114.114.114
 server=/haiyun.me/114.114.114.114
+server=/haizhangs.com/114.114.114.114
 server=/haizhanweb.com/114.114.114.114
 server=/haizhenzhu.com/114.114.114.114
 server=/haizhikj.com/114.114.114.114
