--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38264,6 +38264,7 @@ server=/hao-shangliang.com/114.114.114.114
 server=/hao.ac/114.114.114.114
 server=/hao.gg/114.114.114.114
 server=/hao.ink/114.114.114.114
+server=/hao0202.com/114.114.114.114
 server=/hao0770.com/114.114.114.114
 server=/hao120.cc/114.114.114.114
 server=/hao123-hao123.com/114.114.114.114
