--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38364,6 +38364,7 @@ server=/haofly.net/114.114.114.114
 server=/haofz.com/114.114.114.114
 server=/haoge500.com/114.114.114.114
 server=/haogedu.com/114.114.114.114
+server=/haoghost.com/114.114.114.114
 server=/haogongzhang.com/114.114.114.114
 server=/haohaizi.com/114.114.114.114
 server=/haohan-data.com/114.114.114.114
