--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38492,6 +38492,7 @@ server=/haoshuo.com/114.114.114.114
 server=/haoshuyun.com/114.114.114.114
 server=/haositone.com/114.114.114.114
 server=/haosix.com/114.114.114.114
+server=/haoso.com/114.114.114.114
 server=/haosou.com/114.114.114.114
 server=/haosou123.com/114.114.114.114
 server=/haoss.vip/114.114.114.114
