--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38494,6 +38494,7 @@ server=/haositone.com/114.114.114.114
 server=/haosix.com/114.114.114.114
 server=/haoso.com/114.114.114.114
 server=/haosou.com/114.114.114.114
+server=/haosou.net/114.114.114.114
 server=/haosou123.com/114.114.114.114
 server=/haoss.vip/114.114.114.114
 server=/haostay.com/114.114.114.114
