accelerated-domains: add haoxyx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38548,6 +38548,7 @@ server=/haoxiu.net/114.114.114.114
 server=/haoxiyou.com/114.114.114.114
 server=/haoxue.com/114.114.114.114
 server=/haoxue360.com/114.114.114.114
+server=/haoxyx.com/114.114.114.114
 server=/haoy99.com/114.114.114.114
 server=/haoyao.com/114.114.114.114
 server=/haoyao163.com/114.114.114.114
