accelerated-domains: add hbguohua.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38784,6 +38784,7 @@ server=/hbgmxxjcyxgs.com/114.114.114.114
 server=/hbgr.net/114.114.114.114
 server=/hbgrb.net/114.114.114.114
 server=/hbgsetc.com/114.114.114.114
+server=/hbguohua.com/114.114.114.114
 server=/hbgwy.org/114.114.114.114
 server=/hbgydxw.com/114.114.114.114
 server=/hbgzh.com/114.114.114.114
