--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38797,6 +38797,7 @@ server=/hbhm.net/114.114.114.114
 server=/hbhmxx.com/114.114.114.114
 server=/hbhongrunxwy.com/114.114.114.114
 server=/hbhqzyc.com/114.114.114.114
+server=/hbhtbn.com/114.114.114.114
 server=/hbhtcm.com/114.114.114.114
 server=/hbhtxx.com/114.114.114.114
 server=/hbhuipu.com/114.114.114.114
