--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39015,6 +39015,7 @@ server=/hc-cdn.com/114.114.114.114
 server=/hc-overseas.com/114.114.114.114
 server=/hc-ph.com/114.114.114.114
 server=/hc-software.com/114.114.114.114
+server=/hc-sre.com/114.114.114.114
 server=/hc-testing.com/114.114.114.114
 server=/hc-zhongtong.com/114.114.114.114
 server=/hc01.com/114.114.114.114
