accelerated-domains: add hccoeutg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39033,6 +39033,7 @@ server=/hcbuy.com/114.114.114.114
 server=/hcc11.com/114.114.114.114
 server=/hcciot.com/114.114.114.114
 server=/hcclhealthcare.com/114.114.114.114
+server=/hccoeutg.com/114.114.114.114
 server=/hccpcba.com/114.114.114.114
 server=/hcctm.com/114.114.114.114
 server=/hcdamai.com/114.114.114.114
