accelerated-domains: add hchik.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39058,6 +39058,7 @@ server=/hch518.com/114.114.114.114
 server=/hchbblg.com/114.114.114.114
 server=/hchbsb.com/114.114.114.114
 server=/hchezhu.com/114.114.114.114
+server=/hchik.com/114.114.114.114
 server=/hchlidc.com/114.114.114.114
 server=/hchliot.com/114.114.114.114
 server=/hcicloud.com/114.114.114.114
