accelerated-domains: add heryt111.fun

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39655,6 +39655,7 @@ server=/herstime.com/114.114.114.114
 server=/herta.space/114.114.114.114
 server=/herton.net/114.114.114.114
 server=/hertzhu.com/114.114.114.114
+server=/heryt111.fun/114.114.114.114
 server=/heshanghuitong.com/114.114.114.114
 server=/heshecasa.com/114.114.114.114
 server=/heshui.com/114.114.114.114
