--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39907,6 +39907,7 @@ server=/hh-post.com/114.114.114.114
 server=/hh-wi.com/114.114.114.114
 server=/hh010.com/114.114.114.114
 server=/hh112233hh.com/114.114.114.114
+server=/hh6666.com/114.114.114.114
 server=/hhausq.top/114.114.114.114
 server=/hhax.org/114.114.114.114
 server=/hhbraider.com/114.114.114.114
