accelerated-domains: add hiascend.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40006,6 +40006,7 @@ server=/hiaiabc.com/114.114.114.114
 server=/hiao.com/114.114.114.114
 server=/hiapk.com/114.114.114.114
 server=/hiascend.com/114.114.114.114
+server=/hiascend.net/114.114.114.114
 server=/hiavr.com/114.114.114.114
 server=/hibace.com/114.114.114.114
 server=/hibace.net/114.114.114.114
