--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40032,6 +40032,7 @@ server=/hichina.com/114.114.114.114
 server=/hichina.net/114.114.114.114
 server=/hichips.com/114.114.114.114
 server=/hicitech.com/114.114.114.114
+server=/hiclc.com/114.114.114.114
 server=/hicling.com/114.114.114.114
 server=/hicloud.com/114.114.114.114
 server=/hicnhm.com/114.114.114.114
