accelerated-domains: add hiido.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40103,6 +40103,7 @@ server=/hihonorcloud.com/114.114.114.114
 server=/hihope.org/114.114.114.114
 server=/hii-go.com/114.114.114.114
 server=/hiido.com/114.114.114.114
+server=/hiido.net/114.114.114.114
 server=/hiifong.cc/114.114.114.114
 server=/hiigame.net/114.114.114.114
 server=/hiiibrand.com/114.114.114.114
