--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40127,6 +40127,7 @@ server=/hiksemitech.com/114.114.114.114
 server=/hikstor.com/114.114.114.114
 server=/hikstorage.com/114.114.114.114
 server=/hikunpeng.com/114.114.114.114
+server=/hikunpeng.net/114.114.114.114
 server=/hikvision-jl.com/114.114.114.114
 server=/hikvision.com/114.114.114.114
 server=/hikvisionauto.com/114.114.114.114
