accelerated-domains: add hmreuj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40548,6 +40548,7 @@ server=/hmnst.com/114.114.114.114
 server=/hmoe.link/114.114.114.114
 server=/hmplay.com/114.114.114.114
 server=/hmrczp.com/114.114.114.114
+server=/hmreuj.com/114.114.114.114
 server=/hmsce.org/114.114.114.114
 server=/hmsem.com/114.114.114.114
 server=/hmsemi.com/114.114.114.114
