accelerated-domains: add hnedutv.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40632,6 +40632,7 @@ server=/hndscg.com/114.114.114.114
 server=/hndt.com/114.114.114.114
 server=/hndxzte.com/114.114.114.114
 server=/hnedition.com/114.114.114.114
+server=/hnedutv.com/114.114.114.114
 server=/hnemb.com/114.114.114.114
 server=/hnetn.com/114.114.114.114
 server=/hnfa.org/114.114.114.114
