accelerated-domains: add hnhbyxdq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40658,6 +40658,7 @@ server=/hngwg.com/114.114.114.114
 server=/hngwkj.net/114.114.114.114
 server=/hngwzk.com/114.114.114.114
 server=/hnh.cc/114.114.114.114
+server=/hnhbyxdq.com/114.114.114.114
 server=/hnhflqgc.com/114.114.114.114
 server=/hnhho.com/114.114.114.114
 server=/hnhjgd.com/114.114.114.114
