accelerated-domains: add hntymg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40803,6 +40803,7 @@ server=/hntobacco.com/114.114.114.114
 server=/hntsw.com/114.114.114.114
 server=/hntv.tv/114.114.114.114
 server=/hntxxy.com/114.114.114.114
+server=/hntymg.com/114.114.114.114
 server=/hnukai.com/114.114.114.114
 server=/hnwanglong.com/114.114.114.114
 server=/hnwbxx.com/114.114.114.114
