accelerated-domains: add hogyp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40897,6 +40897,7 @@ server=/hodoop.com/114.114.114.114
 server=/hoehub.com/114.114.114.114
 server=/hogatoga.net/114.114.114.114
 server=/hogesoft.com/114.114.114.114
+server=/hogyp.com/114.114.114.114
 server=/hoho666.com/114.114.114.114
 server=/hohode.com/114.114.114.114
 server=/hoing.net/114.114.114.114
