accelerated-domains: add hongsanban.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41056,6 +41056,7 @@ server=/hongruihuanjing.com/114.114.114.114
 server=/hongruike.com/114.114.114.114
 server=/hongruikt.com/114.114.114.114
 server=/hongruiyanmo.com/114.114.114.114
+server=/hongsanban.com/114.114.114.114
 server=/hongsat.com/114.114.114.114
 server=/hongsegs.com/114.114.114.114
 server=/hongsehuoxian.com/114.114.114.114
