accelerated-domains: add hongyangbg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41097,6 +41097,7 @@ server=/hongxiu.cc/114.114.114.114
 server=/hongxiu.com/114.114.114.114
 server=/hongyan-e.com/114.114.114.114
 server=/hongyan.info/114.114.114.114
+server=/hongyangbg.com/114.114.114.114
 server=/hongyangxiezi.com/114.114.114.114
 server=/hongyanhr.com/114.114.114.114
 server=/hongyanjin.com/114.114.114.114
