accelerated-domains: add hpzyl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41377,6 +41377,7 @@ server=/hpwxc.com/114.114.114.114
 server=/hpyiqi.com/114.114.114.114
 server=/hpyk.com/114.114.114.114
 server=/hpzhatu.com/114.114.114.114
+server=/hpzyl.com/114.114.114.114
 server=/hq-minerals.com/114.114.114.114
 server=/hq0564.com/114.114.114.114
 server=/hq114.net/114.114.114.114
