accelerated-domains: add hrccb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41472,6 +41472,7 @@ server=/hrbyafeng.com/114.114.114.114
 server=/hrbzdty.com/114.114.114.114
 server=/hrbzhsd.com/114.114.114.114
 server=/hrbzyy.com/114.114.114.114
+server=/hrccb.com/114.114.114.114
 server=/hrcfc.com/114.114.114.114
 server=/hrday.com/114.114.114.114
 server=/hrdhej.xyz/114.114.114.114
