accelerated-domains: add hstpnetwork.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41612,6 +41612,7 @@ server=/hstars.net/114.114.114.114
 server=/hstczkj.com/114.114.114.114
 server=/hstong.com/114.114.114.114
 server=/hstpizza.com/114.114.114.114
+server=/hstpnetwork.com/114.114.114.114
 server=/hstspace.com/114.114.114.114
 server=/hstypay.com/114.114.114.114
 server=/hstyre.com/114.114.114.114
