accelerated-domains: add htper.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41721,6 +41721,7 @@ server=/htnice.com/114.114.114.114
 server=/htong.com/114.114.114.114
 server=/htoo.vip/114.114.114.114
 server=/htool.com/114.114.114.114
+server=/htper.com/114.114.114.114
 server=/htqyy.com/114.114.114.114
 server=/htranslate.com/114.114.114.114
 server=/htsamc.com/114.114.114.114
