accelerated-domains: add huaweicloud-smn.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42108,6 +42108,7 @@ server=/huaweicloud-dns.net/114.114.114.114
 server=/huaweicloud-dns.org/114.114.114.114
 server=/huaweicloud-idme.com/114.114.114.114
 server=/huaweicloud-smn.com/114.114.114.114
+server=/huaweicloud-smn.net/114.114.114.114
 server=/huaweicloud.com/114.114.114.114
 server=/huaweicloudapis.com/114.114.114.114
 server=/huaweicloudwaf.com/114.114.114.114
